# Mass-Digitizer

./: .gitignore  DaSSCo.py  DaSSCo.spec  Fedor_export_README.md  MADD.spec  README.md  __main__.spec  data_access_tst.py  export_dassco.sqlite  fedorsteeman  fedorsteeman.pub  install_packages_commands  setup.cfg  ultra_MADD_taxonomy.csv
.github/: README.md
Author_backfill/: authorDropdown_box202_215.xlsx  authorDropdown_updated.xlsx  author_backfill.py  author_backfill_with_test.py  readDropdownSheet.py  read_me.md
Digi_App_taxonomic_spine/: Steps to generate the Digi App taxonomy.md
MADD_app/: MADD_init.py  SpecifyFetch.py  data_access.py  import_csv_memory.py  read_ME.md  requirements.txt  specify_fetch.py  specify_interface.py  specify_sync.py  taxonomy_shrinker.py
MassDigitizer/: .gitignore  Aarhus_taxonomy.py  DaSSCo.iss  DaSSCo.py  DaSSCo.spec  GBIF_interface.py  MADD.spec  MADD_beta.py  MADD_init.py  NHMA_lookup.py  README.md  UI_in_development.py  __main__.py  __main__.spec  additional_popup.py  autoSuggest_popup.py  autoSuggest_taxonname.py  barcode_reader.py  collection_lookup.py  data_access.py  data_entryTEST.py  data_exporter.py  dawa_interface.py  global_settings.py  gui.py  home_screen.py  import_csv_memory.py  kick_off_sql_searches.py  layout test area.py  llayoutt.py  main.py  popup_TWO.py  prepare-db.py  pysidedeploy.spec  requirements.txt  saveOrInsert_functionGUI.py  saving_functionGUI.py  settings_UI.py  specify_interface.py  specify_merge_duplicates  (+25 more)
OpenRefine/: GREL_adds_newtaxonflag.json  GREL_script_naming_convention.md  (+3 more)
(+223 files in other folders)
