[metadata]
name = DaSSCoMassDigitizer
version = 0.0.1
author = Fedor Alexander Steeman
author_email = fedor.steeman@snm.ku.dk
description = DaSSCo Mass Digitizer App 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NHMDenmark/DaSSCo
project_urls =
    Bug Tracker = https://github.com/NHMDenmark/DaSSCo/issues
    Source = https://github.com/DaSSCo/NHMDlabelreader/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0 License
    Operating System :: OS Independent